tests/lean/1487.lean
def ex (α : Sort _) (a b : α) : a = b :=
begin [smt]
  close  -- Should fail
end
